2003-08-12    claudiuc
	* doc: written spec file, and README.

2003-08-07    claudiuc
	* start: started the 'irda' utility project
